Fixed too large page on smaller devices

--- a/src/assets/HomePage/styles/home_page.css
+++ b/src/assets/HomePage/styles/home_page.css
@@ -8,7 +8,7 @@ hr {
 
 .main-content {
     margin: 0 auto;
-    width: 1200px;
+    max-width: 1200px;
     margin-top: 15px;
     display: flex;
     font-family: sans-serif;
@@ -151,4 +151,10 @@ hr {
 
 .statistic-value {
     margin-left: auto;
+}
+
+@media (max-width: 570px) {
+    .topics-section{
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
 }
